✨ | Update site template

--- a/src/layout.astro
+++ b/src/layout.astro
@@ -11,7 +11,7 @@ const {frontmatter} = Astro.props;
 <!DOCTYPE html5>
 <html lang="en" dir="ltr">
 	<head>
-		<title>{!frontmatter.hidePageTitle && frontmatter.title ? `${frontmatter.title} - LbsLightX` : "LbsLightX"}</title>
+		<title>{!frontmatter.hidePageTitle && frontmatter.title ? `${frontmatter.title} - aagaming` : "aagaming"}</title>
 		{frontmatter.description && <meta name="description" content={frontmatter.description}>}
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
