--- a/src/layout.astro
+++ b/src/layout.astro
@@ -21,10 +21,10 @@ const {frontmatter} = Astro.props;
 		<div id="header" transition:persist transition:animate="none">
 			<Logo/>
 			<Navbar>
-				<NavLink href="/projects">projects</NavLink>
-				<NavLink href="/code">code</NavLink>
-				<NavLink href="/contact">contact</NavLink>
-				{/* <NavLink href="https://shrimple.aagaming.me/@aa" rel="me">fedi</NavLink> */}
+				<NavLink href={`${Astro.base}/projects`}>projects</NavLink>
+				<NavLink href={`${Astro.base}/code`}>code</NavLink>
+				<NavLink href={`${Astro.base}/contact`}>contact</NavLink>
+				{/* <NavLink href="https://" rel="me">fedi</NavLink> */}
 			</Navbar>
 		</div>
 		<div id="body" transition:animate={innerTransition}>
