⚙️ | Fix Astro.base usage causing undefined routes

--- a/src/layout.astro
+++ b/src/layout.astro
@@ -21,9 +21,9 @@ const {frontmatter} = Astro.props;
 		<div id="header" transition:persist transition:animate="none">
 			<Logo/>
 			<Navbar>
-				<NavLink href={`${Astro.base}/projects`}>projects</NavLink>
-				<NavLink href={`${Astro.base}/code`}>code</NavLink>
-				<NavLink href={`${Astro.base}/contact`}>contact</NavLink>
+				<NavLink href={`${Astro.base}projects`}>projects</NavLink>
+				<NavLink href={`${Astro.base}code`}>code</NavLink>
+				<NavLink href={`${Astro.base}contact`}>contact</NavLink>
 				{/* <NavLink href="https://" rel="me">fedi</NavLink> */}
 			</Navbar>
 		</div>
