--- a/src/components/logo.astro
+++ b/src/components/logo.astro
@@ -4,7 +4,7 @@
         vertical-align: bottom;
 	}
 </style>
-<a id="logo-link" href="/">
+<a id="logo-link" href={Astro.base}>
     <img src="/images/aagaming.png" class="logo" width="257" height="62" alt="aagaming" />
 </a>
 <script is:inline>
