🖼️ | Update image paths

--- a/src/components/logo.astro
+++ b/src/components/logo.astro
@@ -5,7 +5,7 @@
 	}
 </style>
 <a id="logo-link" href=/cryptid/>
-    <img src="/images/aagaming.png" class="logo" width="257" height="62" alt="aagaming" />
+    <img src="/cryptid/images/aagaming.png" class="logo" width="257" height="62" alt="aagaming" />
 </a>
 <script is:inline>
     if (navigator.userAgent.indexOf("Nintendo WiiU") !== -1) {
