--- a/src/layout.astro
+++ b/src/layout.astro
@@ -21,6 +21,7 @@ const {frontmatter} = Astro.props;
 		<div id="header" transition:persist transition:animate="none">
 			<Logo/>
 			<Navbar>
+			  <NavLink href={`${Astro.base}/`}>home</NavLink>
 				<NavLink href="/cryptid/projects">projects</NavLink>
 				<NavLink href="/cryptid/code">code</NavLink>
 				<NavLink href="/cryptid/contact">contact</NavLink>
