⚙️ | fix: correct base paths and remove undefined routes

--- a/src/components/logo.astro
+++ b/src/components/logo.astro
@@ -4,6 +4,6 @@
         vertical-align: bottom;
 	}
 </style>
-<a id="logo-link" href=/cryptid/>
+<a id="logo-link" href="/cryptid/">
     <img src="/cryptid/images/onlyicandefinemyself.png" class="logo" width="257" height="62" alt="onlyicandefinemyself" />
 </a>
