✨ | polish ui, add lazy loading & font smoothing

--- a/src/components/logo.astro
+++ b/src/components/logo.astro
@@ -5,5 +5,8 @@
 	}
 </style>
 <a id="logo-link" href="/cryptid/">
-    <img src="/cryptid/images/onlyicandefinemyself.png" class="logo" width="257" height="62" alt="onlyicandefinemyself" />
+    <img src="/cryptid/images/onlyicandefinemyself.png" class="logo" width="257" height="62" alt="onlyicandefinemyself"
+    loading="lazy"
+    decoding="async"
+  />
 </a>
